# gitlite

./: .gitignore  README.md  _codeql_detected_source_root
gitlite/: main.cpp
gitlite-main/: CMakeLists.txt  GITLITE.pptx  README.md  main.cpp
gitlite-main/include/: Commit.h  GitliteException.h  Repository.h  Utils.h
gitlite-main/src/: CMakeLists.txt  Commit.cpp  Repository.cpp  Utils.cpp
gitlite-main/testing/: tester.py
gitlite-main/testing/samples/: 1-init.in  3-status-07.in  6-remote-01.in  6-remote-03.in
gitlite/_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  gitlite
gitlite/include/: Commit.h  Repository.h
gitlite/src/: Commit.cpp  GitliteException.cpp  Repository.cpp
gitlite/testing/: out.txt
gitlite/testing/samples/: 6-remote-02.in
